jobs/job_60783810/uncert/errors/benchmark_604/solver_2.txt
INFO: Pointer analysis took 0 sec 3 ms
input.cc:171:34: error: use of undeclared identifier 'node1_index'
void (*nodes[3])(void)  = {      node1_index,      node2_index,      node3_index};
                                 ^
input.cc:171:52: error: use of undeclared identifier 'node2_index'
void (*nodes[3])(void)  = {      node1_index,      node2_index,      node3_index};
                                                   ^
input.cc:171:70: error: use of undeclared identifier 'node3_index'
void (*nodes[3])(void)  = {      node1_index,      node2_index,      node3_index};
                                                                     ^
3 errors generated.
afP19_Ptr2Arr.c:171:34: error: use of undeclared identifier 'node1_index'
void (*nodes[3])(void)  = {      node1_index,      node2_index,      node3_index};
                                 ^
afP19_Ptr2Arr.c:171:52: error: use of undeclared identifier 'node2_index'
void (*nodes[3])(void)  = {      node1_index,      node2_index,      node3_index};
                                                   ^
afP19_Ptr2Arr.c:171:70: error: use of undeclared identifier 'node3_index'
void (*nodes[3])(void)  = {      node1_index,      node2_index,      node3_index};
                                                                     ^
afP19_Ptr2Arr.c:339:5: warning: unused label 'ERROR' [-Wunused-label]
    ERROR: __VERIFIER_error();
    ^~~~~~~
1 warning and 3 errors generated.
